typescript_iac/01_aws_cdk/cloud-cdk/template.yaml
Resources:
  MyBucketF68F3FF0:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      LifecycleConfiguration:
        Rules:
          - ExpirationInDays: 30
            Status: Enabled
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VersioningConfiguration:
        Status: Enabled
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: CloudCdkStack/MyBucket/Resource
  TheVPC92636AB0:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/Resource
  TheVPCingressSubnet1Subnet9B9DF7E0:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/ingressSubnet1
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet1/Subnet
  TheVPCingressSubnet1RouteTable47CFEC27:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/ingressSubnet1
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet1/RouteTable
  TheVPCingressSubnet1RouteTableAssociationEAB00BCF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: TheVPCingressSubnet1RouteTable47CFEC27
      SubnetId:
        Ref: TheVPCingressSubnet1Subnet9B9DF7E0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet1/RouteTableAssociation
  TheVPCingressSubnet1DefaultRouteB77FAA4E:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: TheVPCIGWFA25CC08
      RouteTableId:
        Ref: TheVPCingressSubnet1RouteTable47CFEC27
    DependsOn:
      - TheVPCVPCGWC9B93E30
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet1/DefaultRoute
  TheVPCingressSubnet1EIP5976F70D:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/ingressSubnet1
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet1/EIP
  TheVPCingressSubnet1NATGateway439153F2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - TheVPCingressSubnet1EIP5976F70D
          - AllocationId
      SubnetId:
        Ref: TheVPCingressSubnet1Subnet9B9DF7E0
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/ingressSubnet1
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    DependsOn:
      - TheVPCingressSubnet1DefaultRouteB77FAA4E
      - TheVPCingressSubnet1RouteTableAssociationEAB00BCF
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet1/NATGateway
  TheVPCingressSubnet2Subnet8155F998:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/ingressSubnet2
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet2/Subnet
  TheVPCingressSubnet2RouteTableBEB96868:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/ingressSubnet2
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet2/RouteTable
  TheVPCingressSubnet2RouteTableAssociation4E496446:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: TheVPCingressSubnet2RouteTableBEB96868
      SubnetId:
        Ref: TheVPCingressSubnet2Subnet8155F998
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet2/RouteTableAssociation
  TheVPCingressSubnet2DefaultRoute293EF68A:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: TheVPCIGWFA25CC08
      RouteTableId:
        Ref: TheVPCingressSubnet2RouteTableBEB96868
    DependsOn:
      - TheVPCVPCGWC9B93E30
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/ingressSubnet2/DefaultRoute
  TheVPCapplicationSubnet1Subnet2149DB21:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: application
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/applicationSubnet1
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet1/Subnet
  TheVPCapplicationSubnet1RouteTable0C50F734:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/applicationSubnet1
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet1/RouteTable
  TheVPCapplicationSubnet1RouteTableAssociationC56EF4FA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: TheVPCapplicationSubnet1RouteTable0C50F734
      SubnetId:
        Ref: TheVPCapplicationSubnet1Subnet2149DB21
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet1/RouteTableAssociation
  TheVPCapplicationSubnet1DefaultRoute85977A65:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: TheVPCingressSubnet1NATGateway439153F2
      RouteTableId:
        Ref: TheVPCapplicationSubnet1RouteTable0C50F734
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet1/DefaultRoute
  TheVPCapplicationSubnet2Subnet38670E3A:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: application
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/applicationSubnet2
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet2/Subnet
  TheVPCapplicationSubnet2RouteTable5BBAEB7F:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC/applicationSubnet2
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet2/RouteTable
  TheVPCapplicationSubnet2RouteTableAssociation8D072598:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: TheVPCapplicationSubnet2RouteTable5BBAEB7F
      SubnetId:
        Ref: TheVPCapplicationSubnet2Subnet38670E3A
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet2/RouteTableAssociation
  TheVPCapplicationSubnet2DefaultRoute7BA86B85:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: TheVPCingressSubnet1NATGateway439153F2
      RouteTableId:
        Ref: TheVPCapplicationSubnet2RouteTable5BBAEB7F
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/applicationSubnet2/DefaultRoute
  TheVPCIGWFA25CC08:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/TheVPC
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/IGW
  TheVPCVPCGWC9B93E30:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: TheVPCIGWFA25CC08
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/VPCGW
  TheVPCRestrictDefaultSecurityGroupCustomResourceAFA88FCE:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - TheVPC92636AB0
          - DefaultSecurityGroup
      Account:
        Ref: AWS::AccountId
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: CloudCdkStack/TheVPC/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - "arn:"
                        - Ref: AWS::Partition
                        - ":ec2:"
                        - Ref: AWS::Region
                        - ":"
                        - Ref: AWS::AccountId
                        - :security-group/
                        - Fn::GetAtt:
                            - TheVPC92636AB0
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: CloudCdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
        S3Key: 02b51ab524e7bcf8f477de3e71e5f9a72e448301b26ba62e9e75a14f9c55a093.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs24.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: CloudCdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.02b51ab524e7bcf8f477de3e71e5f9a72e448301b26ba62e9e75a14f9c55a093
      aws:asset:property: Code
  LoadBalancerSG4572B15E:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      SecurityGroupEgress:
        - CidrIp: 255.255.255.255/32
          Description: Disallow all traffic
          FromPort: 252
          IpProtocol: icmp
          ToPort: 86
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTPS traffic
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTP traffic
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/LoadBalancerSG/Resource
  ApplicationSGE6EB7629:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Application Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/ApplicationSG/Resource
  ApplicationSGfromCloudCdkStackLoadBalancerSG7174660B808007F5AFED:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow HTTP traffic from LB
      FromPort: 8080
      GroupId:
        Fn::GetAtt:
          - ApplicationSGE6EB7629
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
          - LoadBalancerSG4572B15E
          - GroupId
      ToPort: 8080
    Metadata:
      aws:cdk:path: CloudCdkStack/ApplicationSG/from CloudCdkStackLoadBalancerSG7174660B:8080
  UserRoleB7C3739B:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    Metadata:
      aws:cdk:path: CloudCdkStack/UserRole/Resource
  UserRoleDefaultPolicyBC5E062B:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: s3:GetObject
            Effect: Allow
            Resource: arn:aws:s3:::my-company-data/*
        Version: "2012-10-17"
      PolicyName: UserRoleDefaultPolicyBC5E062B
      Roles:
        - Ref: UserRoleB7C3739B
    Metadata:
      aws:cdk:path: CloudCdkStack/UserRole/DefaultPolicy/Resource
  InstanceInstanceSecurityGroupF0E2D5BE:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: CloudCdkStack/Instance/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/Instance
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/Instance/InstanceSecurityGroup/Resource
  InstanceInstanceProfileAB5AEF02:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: UserRoleB7C3739B
    Metadata:
      aws:cdk:path: CloudCdkStack/Instance/InstanceProfile
  InstanceC1063A87:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: InstanceInstanceProfileAB5AEF02
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.micro
      SecurityGroupIds:
        - Fn::GetAtt:
            - InstanceInstanceSecurityGroupF0E2D5BE
            - GroupId
      SubnetId:
        Ref: TheVPCapplicationSubnet1Subnet2149DB21
      Tags:
        - Key: Environment
          Value: development
        - Key: Name
          Value: CloudCdkStack/Instance
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - UserRoleDefaultPolicyBC5E062B
      - UserRoleB7C3739B
    Metadata:
      aws:cdk:path: CloudCdkStack/Instance/Resource
  LB8A12904C:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - LoadBalancerSG4572B15E
            - GroupId
      Subnets:
        - Ref: TheVPCingressSubnet1Subnet9B9DF7E0
        - Ref: TheVPCingressSubnet2Subnet8155F998
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      Type: application
    DependsOn:
      - TheVPCingressSubnet1DefaultRouteB77FAA4E
      - TheVPCingressSubnet1RouteTableAssociationEAB00BCF
      - TheVPCingressSubnet2DefaultRoute293EF68A
      - TheVPCingressSubnet2RouteTableAssociation4E496446
    Metadata:
      aws:cdk:path: CloudCdkStack/LB/Resource
  LBListener49E825B4:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: LBListenerEc2TargetGroupAD622A7A
          Type: forward
      LoadBalancerArn:
        Ref: LB8A12904C
      Port: 80
      Protocol: HTTP
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    Metadata:
      aws:cdk:path: CloudCdkStack/LB/Listener/Resource
  LBListenerEc2TargetGroupAD622A7A:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 8080
      Protocol: HTTP
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: "false"
      TargetType: instance
      Targets:
        - Id:
            Ref: InstanceC1063A87
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/LB/Listener/Ec2TargetGroup/Resource
  DatabaseSG2A23C222:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Database Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VpcId:
        Ref: TheVPC92636AB0
    Metadata:
      aws:cdk:path: CloudCdkStack/DatabaseSG/Resource
  DatabaseSGfromCloudCdkStackApplicationSG57E3ABDA5432F6F9A0D5:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow PostgreSQL from application
      FromPort: 5432
      GroupId:
        Fn::GetAtt:
          - DatabaseSG2A23C222
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
          - ApplicationSGE6EB7629
          - GroupId
      ToPort: 5432
    Metadata:
      aws:cdk:path: CloudCdkStack/DatabaseSG/from CloudCdkStackApplicationSG57E3ABDA:5432
  RdsinstanceSubnetGroup53390964:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for Rdsinstance database
      SubnetIds:
        - Ref: TheVPCapplicationSubnet1Subnet2149DB21
        - Ref: TheVPCapplicationSubnet2Subnet38670E3A
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    Metadata:
      aws:cdk:path: CloudCdkStack/Rdsinstance/SubnetGroup/Default
  CloudCdkStackRdsinstanceSecretC95ACC923fdaad7efa858a3daf9490cf0a702aeb:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: " %+~`#$&*()|[]{}:;<>?!'/@\"\\"
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"syscdk"}'
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: CloudCdkStack/Rdsinstance/Secret/Resource
  RdsinstanceSecretAttachment349B73F4:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: CloudCdkStackRdsinstanceSecretC95ACC923fdaad7efa858a3daf9490cf0a702aeb
      TargetId:
        Ref: Rdsinstance6FCDAFCA
      TargetType: AWS::RDS::DBInstance
    Metadata:
      aws:cdk:path: CloudCdkStack/Rdsinstance/Secret/Attachment/Resource
  Rdsinstance6FCDAFCA:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: "100"
      CopyTagsToSnapshot: true
      DBInstanceClass: db.t3.small
      DBSubnetGroupName:
        Ref: RdsinstanceSubnetGroup53390964
      Engine: postgres
      EngineVersion: "17.7"
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: CloudCdkStackRdsinstanceSecretC95ACC923fdaad7efa858a3daf9490cf0a702aeb
            - :SecretString:password::}}
      MasterUsername: syscdk
      PubliclyAccessible: false
      StorageEncrypted: true
      StorageType: gp2
      Tags:
        - Key: Environment
          Value: development
        - Key: Owner
          Value: steve
        - Key: Project
          Value: cloud-engineering-starter
      VPCSecurityGroups:
        - Fn::GetAtt:
            - DatabaseSG2A23C222
            - GroupId
    UpdateReplacePolicy: Snapshot
    DeletionPolicy: Snapshot
    Metadata:
      aws:cdk:path: CloudCdkStack/Rdsinstance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/81X227jNhD9luVjwKiBtwgKv8lOGhjNJobtzUONYDGmxgpjilR5cdYV9O8FReqSxgEa7Bbwk6QZzuHh8MyQGiWjy9+Si0/wYs5ZtjsXfJNUSwtsR+HFfKvM56SaOLZDu67IHrXhSmJGxlY7pAQl04fSciXJmCw/f/uS3qU311eEko1QbDd3G8FZyhgaQ8bkjFAi+BbZgQlcOIGGjNdV/VjTikCW3Q5djYc2IWfksX6k060MPGqKbJRUDyVbV4SXaZZpNAbbCQr4nv7dfkiwN2DxBQ6txbiNRDtVcstzpyFQX1eE8Ux/AbPrAgt8FbE6lN4QVkQ84/8aofkeLJI6LuJhPqUBZdkMW1cE9sAFbLjg9vCnki3MvmSzLL77ySY+pd0qywAyK+/lLTjJnto94eX+cvqv4WAMz+Ws3F/GdN3Lqca4enLWrOckWEQp3HX7RsbrRgCnQv [...]
    Metadata:
      aws:cdk:path: CloudCdkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-3
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-3
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-4
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
      - Fn::Equals:
          - Ref: AWS::Region
          - us-west-2
